fix: total not shoing & excel error

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -45,5 +45,6 @@
   "export": "Export",
   "total": "Total",
   "noRecord": "No Record",
-  "records": "Records"
+  "records": "Records",
+  "all": "All"
 }
